[package]
name = "org-chart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
rust_team_data = { git = "https://github.com/rust-lang/team" }
serde_json = "1.0.111"
